--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,11 @@
 SECRET_KEY=
 
 
-NAME=
-USER=
-PASSWORD=
-HOST=
-PORT=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=
+POSTGRES_PORT=
 
 STRIPE_API_KEY=
 
